--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "com.G_Framework.UIComAutoBindTool",
-  "displayName": "G_Framework UIComAutoBindTool",
-  "category": "G_Framework",
-  "description": "G_Framework UIComAutoBindTool Component",
+  "name": "com.GFramework.UIComAutoBindTool",
+  "displayName": "GFramework UIComAutoBindTool",
+  "category": "GFramework",
+  "description": "GFramework UIComAutoBindTool Component",
   "version": "1.0.0",
   "unity": "2022.3",
   "keywords": [
-    "G_Framework"
+    "GFramework"
   ],
   "repository": {
-    "name": "com.G_Framework.UIComAutoBindTool",
+    "name": "com.GFramework.UIComAutoBindTool",
     "url": "https://gitee.com/TianYaLiuLang/uicom-auto-bind-tool.git",
     "type": "git"
   },
